update all resume data and fix errors

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <h2>Projects</h2>
       </div>
       <div id="workExperience" class="gray">
-        <h2>Work Experience</h2>
+        <h2>Work History</h2>
       </div>
       <div id="mapDiv">
         <h2>Where I've Lived and Worked</h2>
