--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="viewport" content="width=device-width">
   </head>
   <body>
-    <div id="main">
+    <div id="main" class="steel">
       <div id="header" class="center-content clear-fix">
         <ul id="topContacts" class="flex-box"></ul>
       </div>
@@ -20,13 +20,13 @@
       <div id="education" class="gray">
         <h2>Education</h2>
       </div>
-      <div id="projects">
+      <div id="projects" class="steel">
         <h2>Projects</h2>
       </div>
       <div id="workExperience" class="gray">
         <h2>Work History</h2>
       </div>
-      <div id="mapDiv">
+      <div id="mapDiv" class="steel">
         <h2>Where I've Lived and Worked</h2>
       </div>
       <div id="lets-connect" class="dark-gray">
